--- a/style.css
+++ b/style.css
@@ -1,20 +1,3 @@
 body{
-    background-color: black;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#event_info{
-    background-color: aliceblue;
-    color: black;
-}
-
-#org_info{
-    border-top-width: thin;
-    border-top-color: aliceblue;
-    border-top-style: solid;
-}
-
-#event_footer{
-    background-color: aliceblue;
+    font-family: Raleway, Arial, Helvetica, sans-serif;
 }
