--- a/pages/style.css
+++ b/pages/style.css
@@ -1,3 +1,9 @@
 body{
     font-family: Raleway, Arial, Helvetica, sans-serif;
 }
+
+.text-justify {
+    text-align: justify;
+  }
+
+.background-color-grey
