--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,3 +110,24 @@ width: 100%;
 button#delete-button.btn{
     padding: 0.5rem;
 }
+
+p#event-card-title {
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom:0.1rem;
+}
+
+p#event-card-info {
+    font-size: 0.65rem;
+
+}
+
+p#event-card-body {
+    text-align: justify;
+    font-size: 0.75rem;
+}
+
+img#event-card-img {
+    width: 100%;
+    height: 180px;
+}
