--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,17 +302,10 @@ nav#event-navbar{
  text-transform: uppercase;
     font-size: .9rem;
     font-weight: 600; 
-    background: #292b2c;
-    color: #f7f7f7;
+    color: #080808;
 }
 
-nav#event-navbar{
- text-transform: uppercase;
-    font-size: .9rem;
-    font-weight: 600; 
-    background: #292b2c;
-    color: #f7f7f7;
-}
+
 
 
 
