home page fixed!

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,38 +54,47 @@ button#tag-button.btn {
 
 
 button#tag-button.btn.theater-tag{
+    font-size: 0.95rem;
     background: #c43227; /* dark red */
 }
 
 button#tag-button.btn.dance-tag{
+     font-size: 0.95rem;
     background: #4c3ac2; /* indigo */
 }
 
 button#tag-button.btn.sculpture-tag{
+     font-size: 0.95rem;
     background: #e0d426; /* yellow */
 }
 
 button#tag-button.btn.music-tag{
+     font-size: 0.95rem;
     background: #db27d5; /* purple */
 }
 
 button#tag-button.btn.literature-tag{
+     font-size: 0.95rem;
     background: #43b52a; /* green */
 }
 
 button#tag-button.btn.comedy-tag{
+     font-size: 0.95rem;
     background: #2a97b5; /* dark cyan */
 }
 
 button#tag-button.btn.paintings-tag{
+     font-size: 0.95rem;
     background: #d45008; /* dark orage */
 }
 
 button#tag-button.btn.others-tag{
+     font-size: 0.95rem;
     background: #000FFF; /* dark orage */
 }
 
 button#tag-button.btn:hover {
+     font-size: 0.95rem;
     background:  lightgrey;
 }
 
@@ -122,12 +131,12 @@ p#event-card-title {
 }
 
 p#event-card-info {
-    font-size: 0.65rem;
+    font-size: 0.675rem;
 
 }
 
 p#event-card-body {
-    text-align: justify;
+   
     font-size: 0.75rem;
 }
 
@@ -139,23 +148,29 @@ img#event-card-img {
 
 
 
-a#event-card-button.btn.btn-sm.btn-dark {
+a#event-card-button.btn.btn-sm{
     color: #f7f7f7;  /* light-grey */
     background-color: #292b2c ;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
     border: none;
-    font-size: 0.65rem;
+    font-size: 0.7rem;
     font-weight: 625;
 }
 
 
-a#event-card-button.btn.btn-sm.btn-dark:hover{
+a#event-card-button.btn.btn-sm:hover{
     background-color: lightgrey; 
 }
 
-
+a#event-card-button-buy.btn.btn-sm.btn-outline-dark{
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 0.7rem;
+    font-weight: 625;
+}
 
 .image {
   display: block;
@@ -184,7 +199,7 @@ div#overlay-text.text {
   color: white;
   font-size: 0.85rem;
   position: absolute;
-  top: 50%;
+  top: 34%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -193,13 +208,14 @@ div#overlay-text.text {
 }
 
 div.text-centered {
+  font-size: 0.85rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
     text-transform: uppercase;
     font-weight: 650;
-    font-size: 0.65rem;
+
 }
 
 
@@ -305,15 +321,6 @@ nav#event-navbar{
     background: #292b2c;
     color: #f7f7f7;
 }
-
-nav#event-navbar{
- text-transform: uppercase;
-    font-size: .9rem;
-    font-weight: 600; 
-    background: #292b2c;
-    color: #f7f7f7;
-}
-
 
 #upload {
     opacity: 0;
