--- a/public/css/main.css
+++ b/public/css/main.css
@@ -418,6 +418,35 @@ button#btn-login.btn.float-right:hover{
     border-color: #292b2c;
 }
 
+button#save-changes-btn.btn{
+    text-transform: uppercase;
+    padding-bottom:  0.2rem;
+    padding-top:  0.2rem;
+    padding-right:  0.5rem;
+    padding-left:  0.5rem;
+    background: #292b2c;
+    color: #f7f7f7;
+    font-weight: 600;
+    font-size: 0.85rem;
+}
+
+button#save-changes-btn.btn:hover{
+ background: lightgray;  
+    border-color: #292b2c;
+}
+
+button#light-btn.btn{
+    text-transform: uppercase;
+    padding-bottom:  0.2rem;
+    padding-top:  0.2rem;
+    padding-right:  0.5rem;
+    padding-left:  0.5rem;
+    font-weight: 600;
+    font-size: 0.85rem;
+}
+
+
+
 
 button#btn-add-post.btn.float-right{
     text-transform: uppercase;
@@ -477,3 +506,6 @@ div#session-alerts{
     right:2.5%;
     top:10%;
 }
+
+
+  
