--- a/public/css/main.css
+++ b/public/css/main.css
@@ -509,11 +509,21 @@ div#session-alerts{
 
 
 /* User photo upload */
-#imageResult{
-  padding: 5px;
-  width: 150px;
-}
+
 
 input#upload-photo{
-    color: blue;
+    display:none;
+
 }
+
+label#upload-button:hover{
+    background-color: lightcyan;
+    border-radius: 15px 50px;
+}
+
+img#imageResult{
+    max-width: 25%;
+    max-height: 25%;
+}
+
+
