Search bars looking good

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,13 @@ body{
     font-weight: 600;
 }
 
+.column {
+    float: left;
+    width: 50.00%;
+    padding: 5px;
+    align-items: center;
+}
+
 /* Buttons */
 .btn-margin {
     margin: 12.5px;
