--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,6 +48,12 @@ button#dropdown-navbar.btn.dropdown-toggle:hover{
 
 }
 
+button#dropdown-navbar.btn.dropdown-toggle:focus{
+    background-color: lightgrey; 
+
+}
+
+
 
 #tag-button.btn {
     color: white;
@@ -105,6 +111,12 @@ button#dropdown-navbar.btn.dropdown-toggle:hover{
         border-color: #292b2c;
 }
 
+#tag-button.btn:focus {
+    font-size: 0.95rem;
+   background:  lightgrey;
+       border-color: #292b2c;
+}
+
 p#search-by{
     font-size: 0.8rem; 
     margin-bottom: 0.1rem; 
@@ -146,6 +158,7 @@ p#event-card-info {
 p#event-card-body {
    
     font-size: 0.75rem;
+    line-height: 1.4;
 }
 
 img#event-card-img {
@@ -173,6 +186,11 @@ a#event-card-button.btn.btn-sm:hover{
        border-color: #292b2c;
 }
 
+a#event-card-button.btn.btn-sm:focus{
+    background-color: lightgrey; 
+       border-color: #292b2c;
+}
+
 a#event-card-button-buy.btn.btn-sm.btn-outline-dark{
     text-align: center;
     text-transform: uppercase;
@@ -185,6 +203,9 @@ a#event-card-button-buy.btn.btn-sm.btn-outline-dark:hover{
     background-color: white;
 }
 
+a#event-card-button-buy.btn.btn-sm.btn-outline-dark:focus{
+    background-color: white;
+}
 
 .image {
   display: block;
@@ -208,6 +229,9 @@ a#event-card-button-buy.btn.btn-sm.btn-outline-dark:hover{
 .container:hover .overlay {
   opacity: 1;
 }
+.container:focus .overlay {
+    opacity: 1;
+  }
 
 div#overlay-text.text {
   color: white;
@@ -249,6 +273,10 @@ button#button-header.btn.btn-light.btn-sm.btn-margin:hover{
     background-color: lightgrey; 
 }
 
+button#button-header.btn.btn-light.btn-sm.btn-margin:focus{
+    background-color: lightgrey; 
+}
+
 p#event-info{
     font-size: 0.85rem;
     
@@ -267,6 +295,10 @@ a#event-maps-button {
 }
 
 a#event-maps-button:hover{
+    background-color: lightgrey; 
+}
+
+a#event-maps-button:focus{
     background-color: lightgrey; 
 }
 
@@ -313,6 +345,7 @@ a#event-maps-button:hover{
 p#comment-body{
     text-align: justify;
     font-size: 0.85rem;
+    line-height: 1.4;
 }
 
 p#comment-datetime{
@@ -396,6 +429,10 @@ button#button-save-changes:hover{
     background: lightgray;
 }
 
+button#button-save-changes:focus{
+    background: lightgray;
+}
+
 div.tab-pane.active{
     padding: 1.5rem;
     background: white;
@@ -429,6 +466,12 @@ button#btn-login.btn.float-right:hover{
     border-color: #292b2c;
 }
 
+
+button#btn-login.btn.float-right:focus{
+    background: lightgray;  
+       border-color: #292b2c;
+   }
+
 button#save-changes-btn.btn{
     text-transform: uppercase;
     padding-bottom:  0.2rem;
@@ -445,6 +488,12 @@ button#save-changes-btn.btn:hover{
  background: lightgray;  
     border-color: #292b2c;
 }
+
+button#save-changes-btn.btn:focus{
+    background: lightgray;  
+       border-color: #292b2c;
+   }
+   
 
 button#light-btn.btn{
     text-transform: uppercase;
@@ -475,6 +524,11 @@ button#btn-add-post.btn.float-right:hover{
  background: lightgray;  
     border-color: #292b2c;
 }
+
+button#btn-add-post.btn.float-right:focus{
+    background: lightgray;  
+       border-color: #292b2c;
+   }
 
 button#edit-post-button{
     background-color: white;
@@ -514,6 +568,11 @@ button#btn-login.btn.float-left:hover{
  background: lightgray;  
     border-color: #292b2c;
 }
+
+button#btn-login.btn.float-left:focus{
+    background: lightgray;  
+       border-color: #292b2c;
+   }
 
 div#text-banner-login.centered{
 
@@ -567,6 +626,11 @@ button#search-users:hover {
     border-color: #292b2c;
 }
   
+  
+button#search-users:focus {
+    background: lightgray;  
+    border-color: #292b2c;
+}
 
 input#search-users-invite{
     padding: 0.5rem;
@@ -591,6 +655,12 @@ button#search-users-invite {
   }
   
 button#search-users-invite:hover {
+    background: lightgray;  
+    border-color: #292b2c;
+}
+
+  
+button#search-users-invite:focus {
     background: lightgray;  
     border-color: #292b2c;
 }
@@ -628,6 +698,13 @@ label#upload-button:hover{
     border-color: black;
  }
 
+
+label#upload-button:focus{
+    background: lightgray;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+ }
 /*SHOW EVENT DETAIL ADMIN*/
 
 button#show-event-detail{
@@ -641,6 +718,11 @@ button#show-event-detail{
   
 }
 button#show-event-detail:hover{
+    background-color: rgb(206, 201, 201);
+    border: none;
+}
+
+button#show-event-detail:focus{
     background-color: rgb(206, 201, 201);
     border: none;
 }
@@ -732,6 +814,15 @@ nav#event-navbar a.nav-link:hover{
 a#wishlist-btn:hover{
     color: lightslategrey!important;
 }
+
+nav#event-navbar a.nav-link:focus{
+    color: lightslategrey!important;
+  }
+  
+  a#wishlist-btn:focus{
+      color: lightslategrey!important;
+  }
+  
 
 a#change-invite-message {
     font-style: italic;
